# oidc-middleware

./: .gitignore  .pre-commit-config.yaml  .style.yapf  BUILD  Dockerfile  LICENSE  README.md  README.org  WORKSPACE  bazel-bin  bazel-oidc-middleware  bazel-out  bazel-testlogs  build.sh  pyproject.toml  requirements.txt
firestore_middleware/: BUILD  README.ibazel  __init__.py  app.py  models.py  types.py
